# Thames-Ecoli

./: .gitignore  Makefile  README.md  nohup.out  pyproject.toml  thames.code-workspace
thames/data_analysis/: ecoli_coliform.ipynb
thames/data_preprocessing/: append_samples.py  cso.ipynb  cso_rain_dataset.ipynb  ecoli_coliform.ipynb  ecoli_dataset.ipynb  overall.ipynb  rain_cso.ipynb  rainfall.ipynb  tides.ipynb  water_quality.ipynb
thames/modelling/: ecoli_coliform.ipynb  ecoli_coliform_classification.ipynb  ecoli_coliform_regression.ipynb
thames/modelling/overall/: bacteria.sqlite3  coliform.sqlite3  coliform_classification.ipynb  ecoli.sqlite3  ecoli_classification.ipynb  ecoli_regression.ipynb  sum_classification.ipynb
thames/modelling/per_site/: bacteria.sqlite3  coliform.sqlite3  coliform_classification.ipynb  ecoli.sqlite3  ecoli_classification.ipynb  sum_classification.ipynb
thames/utils/: download_historical.py
