[tool.poetry]
name = "thames"
version = "0.1.0"
description = ""
authors = ["MassimilianoArca <massimiliano.arca@mail.polimi.it>"]
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.11, <3.13"
jupyter = "^1.0.0"
numpy = "^1.26.1"
pandas = "^2.1.2"
jupyterlab = "^4.0.8"
openpyxl = "^3.1.2"
black = {extras = ["jupyter"], version = "^23.11.0"}
isort = "^5.12.0"
pylint = "^3.0.2"
flake8 = "^6.1.0"
mypy = "^1.6.1"
bng-latlon = "^1.1"
matplotlib = "^3.8.2"
seaborn = "^0.13.0"
scipy = "^1.11.4"
scikit-learn = "^1.3.2"
plotly = "5.18.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 80